objects/RocketDocs__Proposal_Request__c.object
<CustomObject>
    <description>RocketDocs Salesforce Connector 2.0: Container for the project synced from RocketDocs.</description>
    <fields>
        <fullName>AccountCity__c</fullName>
        <label>Account City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCountry__c</fullName>
        <label>Account Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountState__c</fullName>
        <label>Account State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountStreet__c</fullName>
        <label>Account Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountZip__c</fullName>
        <label>Account Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityOwnerEmail__c</fullName>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OpportunityOwnerHRTitle__c</fullName>
        <label>Opportunity Owner HR Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityOwnerMobileNumber__c</fullName>
        <label>Opportunity Owner Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OpportunityOwnerPhoneNumber__c</fullName>
        <label>Opportunity Owner Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OpportunityOwnerTitle__c</fullName>
        <label>Opportunity Owner Title</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Department__c</fullName>
        <label>Opportunity Owner Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContactEmail__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PrimaryContactFirstName__c</fullName>
        <label>Primary Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContactFullName__c</fullName>
        <label>Primary Contact Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContactPhone__c</fullName>
        <label>Primary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PrimaryContactTitle__c</fullName>
        <label>Primary Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RocketDocs__Account_Name__c</fullName>
        <description>RocketDocs Salesforce Connector 2.0: Text name value of the the related parent account</description>
        <formula>RocketDocs__Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RocketDocs__Due_Date__c</fullName>
        <description>RocketDocs Salesforce Connector 2.0: Indicates when the user expects a response from the proposal team.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RocketDocs__Last_Integration_Details__c</fullName>
        <description>RocketDocs Salesforce Connector 2.0: Last custom status code and messages from the RocketDocs system integration</description>
        <label>Last Integration Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RocketDocs__Last_Integration_Message__c</fullName>
        <description>RocketDocs Salesforce Connector 2.0: last REST status code and messages from the RocketDocs system integration</description>
        <label>Last Integration Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RocketDocs__Last_Sent_to_RocketDocs__c</fullName>
        <description>RocketDocs Salesforce Connector 2.0: Last date stamp when data was transferred sucessfully from SFDC to RocketDocs</description>
        <label>Last Sent to RocketDocs</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RocketDocs__Last_Updated_by_RocketDocs__c</fullName>
        <description>RocketDocs Salesforce Connector 2.0: Last date stamp when data was transferred sucessfully from RocketDocs to SFDC</description>
        <label>Last Updated by RocketDocs</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RocketDocs__Notes__c</fullName>
        <description>RocketDocs Salesforce Connector 2.0: Provide notes for the Initial Proposal Request</description>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RocketDocs__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RocketDocs Salesforce Connector 2.0: Main proposal request container associated to an Opportunity</description>
        <inlineHelpText>RocketDocs Salesforce Connector 2.0: Lookup to the Opportunity. There should only be one active Proposal Request associated to an Opportunity at any given time.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RocketDocs Requests</relationshipLabel>
        <relationshipName>RocketDocs_Proposal_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RocketDocs__Proposal_Type__c</fullName>
        <description>RocketDocs Salesforce Connector 2.0: Proposal Type designated within RocketDocs after the proposal has been approved and created</description>
        <label>Proposal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RocketDocs__Sent_to_RocketDocs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RocketDocs Salesforce Connector 2.0: Boolean to indicate if this record has successfully initiated integration with Rocketdocs</description>
        <label>Sent to RocketDocs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RocketDocs__Status__c</fullName>
        <description>RocketDocs Salesforce Connector 2.0: RocketDocs will provide a status of the proposal request</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RocketDocs Request</label>
    <listViews>
        <fullName>RocketDocs__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RDR-{0000000}</displayFormat>
        <label>RocketDocs Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RocketDocs Requests</pluralLabel>
    <recordTypes>
        <fullName>RocketDocs__Closed_Proposal_Request</fullName>
        <active>true</active>
        <description>RocketDocs Salesforce Connector 2.0: Record type when a proposal request is closed or completed</description>
        <label>Closed Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>RocketDocs__Open_Proposal_Request</fullName>
        <active>true</active>
        <description>RocketDocs Salesforce Connector 2.0: Default Record Type for Open Proposal Requests</description>
        <label>Open Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>